* Changelog
** Unreleased
   - Disable sideline code actions and doc on cursor hover to reduce noise features.

** 8.0.0
   - lsp-ui version working with lsp-mode v8.0.0

** 7.0.1
   - lsp-ui version working with lsp-mode v7.0.1