@@ -1,6 +1,9 @@
 * Changelog
+
 ** Unreleased
    - Disable sideline code actions and doc on cursor hover to reduce noise features.
+   - Allow customisation for the imenu buffer position (#718)
+   - Fix sideline alignment with text-scale (#719)
 
 ** 8.0.0
    - lsp-ui version working with lsp-mode v8.0.0
